<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:isScrollContainer="true" 
        android:scrollbarAlwaysDrawVerticalTrack="true" 
        android:scrollbarStyle="outsideInset" 
        android:scrollbars="vertical">
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:textStyle="bold" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical|center_horizontal" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:text="AndroDMTP GPS Params"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_marginBottom="10px" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:layout_marginTop="30px">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView2" android:text="GPS rate" android:layout_gravity="center_vertical" android:width="220px"></TextView>
        <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="numberDecimal" android:id="@+id/gpsRate">
            <requestFocus></requestFocus>
        </EditText>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView11" android:layout_marginLeft="10px" android:layout_gravity="center_vertical" android:text="@string/seconds" android:width="55px"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout2" android:layout_margin="10px">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView3" android:text="GPS accuracy" android:layout_gravity="center_vertical" android:width="220px"></TextView>
        <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="number" android:id="@+id/gpsAccuracy"></EditText>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView12" android:layout_marginLeft="10px" android:layout_gravity="center_vertical" android:text="@string/meters" android:width="55px"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout3" android:layout_margin="10px">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView4" android:text="GPS min speed" android:layout_gravity="center_vertical" android:width="220px"></TextView>
        <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="number" android:id="@+id/gpsMinSpeed"></EditText>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView13" android:layout_marginLeft="10px" android:layout_gravity="center_vertical" android:text="@string/kmh" android:width="55px"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout4" android:layout_margin="10px">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView5" android:text="GPS motion start type" android:width="220px" android:layout_gravity="center_vertical"></TextView>
        <Spinner android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:prompt="@string/motion_type_prompt" android:id="@+id/motionspinner"></Spinner>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout5" android:layout_margin="10px">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView6" android:text="GPS motion start meter" android:width="220px" android:layout_gravity="center_vertical"></TextView>
        <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="number" android:id="@+id/gpsMotionStartMeter"></EditText>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView15" android:width="55px" android:layout_marginLeft="10px" android:text="@string/meters"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout6" android:layout_margin="10px">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView7" android:text="GPS motion start speed" android:width="220px" android:layout_gravity="center_vertical"></TextView>
        <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="number" android:id="@+id/gpsMotionStartSpeed"></EditText>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView16" android:width="55px" android:layout_marginLeft="10px" android:text="@string/kmh"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout7" android:layout_margin="10px">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView8" android:text="GPS motion in motion" android:width="220px" android:layout_gravity="center_vertical"></TextView>
        <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="number" android:id="@+id/gpsMotionInMotion"></EditText>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView17" android:width="55px" android:layout_marginLeft="10px" android:text="@string/seconds"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout8" android:layout_margin="10px">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView9" android:text="GPS motion stop" android:width="220px" android:layout_gravity="center_vertical"></TextView>
        <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="number" android:id="@+id/gpsMotionStop"></EditText>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView18" android:width="55px" android:layout_marginLeft="10px" android:text="@string/seconds"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout9" android:layout_margin="10px">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView10" android:text="GPS motion dormant" android:width="220px" android:layout_gravity="center_vertical"></TextView>
        <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="number" android:id="@+id/gpsMotionDormant"></EditText>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView19" android:width="55px" android:layout_marginLeft="10px" android:text="@string/seconds"></TextView>
    </LinearLayout>
    <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:layout_marginTop="30px">
        <Button android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_width="wrap_content" android:layout_centerHorizontal="true" android:id="@+id/applygps" android:text="@string/savesettings"></Button>
    </RelativeLayout>
</LinearLayout>
</ScrollView>